--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,10 @@
     @apply disabled:cursor-not-allowed;
   }
 
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
   @keyframes move-x {
     from {
       transform: translateX(0);
